<resources>
    <string name="app_name">MCalc</string>
    <string name="principle_in_dollars">Principle (in dollars)</string>
    <string name="amortization_in_years">Amortization (in years)</string>
    <string name="interest_as_an_annual_percent">Interest (as an annual percent)</string>
    <string name="monthly_payment">MONTHLY PAYMENT</string>
    <string name="five_year_outstanding">FIVE YEAR OUTSTANDING</string>
</resources>
